--- a/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-04-panes/index.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-04-panes/index.html
@@ -810,15 +810,15 @@
     <article role="article" class="layout-slat profile-thumb">
         <div class="layout-slat__media"> 
           <div class="profile-thumb__image--rounded">
-            <a href="#"><img alt="" src="../../images-patternlab/cj-78-78.jpg"></a>
+            <a href="#"><img alt="" src="../../images-patternlab/sherlock-78-78.jpg"></a>
           </div>
           <div class="profile-thumb__name">
-            <a href="#">C.J. Cregg</a>  
+            <a href="#">Sherlock Holmes</a>  
           </div>
         </div>
         <div class="layout-slat__content">
           <div class="profile-thumb__summary">
-            Why, why, oh why do you ask me questions that you absolutely positively know I'm not going to answer?
+            How often have I said to you that when you have eliminated the impossible, whatever remains, however improbable, must be the truth?
           </div>
         </div>
     </article>
@@ -835,15 +835,15 @@
     &lt;article role=&quot;article&quot; class=&quot;layout-slat profile-thumb&quot;&gt;
         &lt;div class=&quot;layout-slat__media&quot;&gt; 
           &lt;div class=&quot;profile-thumb__image--rounded&quot;&gt;
-            &lt;a href=&quot;#&quot;&gt;&lt;img alt=&quot;&quot; src=&quot;../../images-patternlab/cj-78-78.jpg&quot;&gt;&lt;/a&gt;
+            &lt;a href=&quot;#&quot;&gt;&lt;img alt=&quot;&quot; src=&quot;../../images-patternlab/sherlock-78-78.jpg&quot;&gt;&lt;/a&gt;
           &lt;/div&gt;
           &lt;div class=&quot;profile-thumb__name&quot;&gt;
-            &lt;a href=&quot;#&quot;&gt;C.J. Cregg&lt;/a&gt;  
+            &lt;a href=&quot;#&quot;&gt;Sherlock Holmes&lt;/a&gt;  
           &lt;/div&gt;
         &lt;/div&gt;
         &lt;div class=&quot;layout-slat__content&quot;&gt;
           &lt;div class=&quot;profile-thumb__summary&quot;&gt;
-            Why, why, oh why do you ask me questions that you absolutely positively know I'm not going to answer?
+            How often have I said to you that when you have eliminated the impossible, whatever remains, however improbable, must be the truth?
           &lt;/div&gt;
         &lt;/div&gt;
     &lt;/article&gt;
@@ -866,13 +866,13 @@
           <div class="layout-slat layout-slat--small">
             <div class="layout-slat__media">      
               <div class="view__author-image">
-                <img src="../../images-patternlab/inigo-35-35.jpg">
+                <img src="../../images-patternlab/buttercup-35-35.jpg">
               </div>
             </div>
             <div class="layout-slat__content">
-              <div class="view__title"><a href="#">Danish danish candy canes bonbon cheesecake danish marzipan</a></div>
+              <div class="view__title"><a href="#">Cottage cheese brie lancashire. Boursin when the cheese comes out.</a></div>
               <div class="view__meta">
-                Posted by <strong>Inigo Montoya</strong> | November 19 at 11:55pm
+                Posted by <strong>Princess Buttercup</strong> | December 28 at 8:34am
               </div>
             </div>
           </div>
@@ -881,13 +881,13 @@
           <div class="layout-slat layout-slat--small">
             <div class="layout-slat__media">      
               <div class="view__author-image">
-                <img src="../../images-patternlab/cameron-35-35.jpg">
+                <img src="../../images-patternlab/tyrion-35-35.jpg">
               </div>
             </div>
             <div class="layout-slat__content">
-              <div class="view__title"><a href="#">Rebel Mission to Ord Mantell</a></div>
+              <div class="view__title"><a href="#">Thunder, thunder, thundercats, Ho!</a></div>
               <div class="view__meta">
-                Posted by <strong>Cameron Howe</strong> | September 4 at 9:04am
+                Posted by <strong>Tyrion Lannister</strong> | June 8 at 11:37pm
               </div>
             </div>
           </div>
@@ -896,13 +896,13 @@
           <div class="layout-slat layout-slat--small">
             <div class="layout-slat__media">      
               <div class="view__author-image">
-                <img src="../../images-patternlab/daenerys-35-35.jpg">
+                <img src="../../images-patternlab/sherlock-35-35.jpg">
               </div>
             </div>
             <div class="layout-slat__content">
-              <div class="view__title"><a href="#">Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM</a></div>
+              <div class="view__title"><a href="#">You Can't Take The Sky From Me</a></div>
               <div class="view__meta">
-                Posted by <strong>Daenerys Targaryen</strong> | May 26 at 6:37pm
+                Posted by <strong>Sherlock Holmes</strong> | January 1 at 6:20am
               </div>
             </div>
           </div>
@@ -925,13 +925,13 @@
           &lt;div class=&quot;layout-slat layout-slat--small&quot;&gt;
             &lt;div class=&quot;layout-slat__media&quot;&gt;      
               &lt;div class=&quot;view__author-image&quot;&gt;
-                &lt;img src=&quot;../../images-patternlab/inigo-35-35.jpg&quot;&gt;
+                &lt;img src=&quot;../../images-patternlab/buttercup-35-35.jpg&quot;&gt;
               &lt;/div&gt;
             &lt;/div&gt;
             &lt;div class=&quot;layout-slat__content&quot;&gt;
-              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Danish danish candy canes bonbon cheesecake danish marzipan&lt;/a&gt;&lt;/div&gt;
+              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Cottage cheese brie lancashire. Boursin when the cheese comes out.&lt;/a&gt;&lt;/div&gt;
               &lt;div class=&quot;view__meta&quot;&gt;
-                Posted by &lt;strong&gt;Inigo Montoya&lt;/strong&gt; | November 19 at 11:55pm
+                Posted by &lt;strong&gt;Princess Buttercup&lt;/strong&gt; | December 28 at 8:34am
               &lt;/div&gt;
             &lt;/div&gt;
           &lt;/div&gt;
@@ -940,13 +940,13 @@
           &lt;div class=&quot;layout-slat layout-slat--small&quot;&gt;
             &lt;div class=&quot;layout-slat__media&quot;&gt;      
               &lt;div class=&quot;view__author-image&quot;&gt;
-                &lt;img src=&quot;../../images-patternlab/cameron-35-35.jpg&quot;&gt;
+                &lt;img src=&quot;../../images-patternlab/tyrion-35-35.jpg&quot;&gt;
               &lt;/div&gt;
             &lt;/div&gt;
             &lt;div class=&quot;layout-slat__content&quot;&gt;
-              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Rebel Mission to Ord Mantell&lt;/a&gt;&lt;/div&gt;
+              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Thunder, thunder, thundercats, Ho!&lt;/a&gt;&lt;/div&gt;
               &lt;div class=&quot;view__meta&quot;&gt;
-                Posted by &lt;strong&gt;Cameron Howe&lt;/strong&gt; | September 4 at 9:04am
+                Posted by &lt;strong&gt;Tyrion Lannister&lt;/strong&gt; | June 8 at 11:37pm
               &lt;/div&gt;
             &lt;/div&gt;
           &lt;/div&gt;
@@ -955,13 +955,13 @@
           &lt;div class=&quot;layout-slat layout-slat--small&quot;&gt;
             &lt;div class=&quot;layout-slat__media&quot;&gt;      
               &lt;div class=&quot;view__author-image&quot;&gt;
-                &lt;img src=&quot;../../images-patternlab/daenerys-35-35.jpg&quot;&gt;
+                &lt;img src=&quot;../../images-patternlab/sherlock-35-35.jpg&quot;&gt;
               &lt;/div&gt;
             &lt;/div&gt;
             &lt;div class=&quot;layout-slat__content&quot;&gt;
-              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM&lt;/a&gt;&lt;/div&gt;
+              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;You Can't Take The Sky From Me&lt;/a&gt;&lt;/div&gt;
               &lt;div class=&quot;view__meta&quot;&gt;
-                Posted by &lt;strong&gt;Daenerys Targaryen&lt;/strong&gt; | May 26 at 6:37pm
+                Posted by &lt;strong&gt;Sherlock Holmes&lt;/strong&gt; | January 1 at 6:20am
               &lt;/div&gt;
             &lt;/div&gt;
           &lt;/div&gt;
