--- a/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-04-panes/index.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-04-panes/index.html
@@ -866,28 +866,13 @@
           <div class="layout-slat layout-slat--small">
             <div class="layout-slat__media">      
               <div class="view__author-image">
-                <img src="../../images-patternlab/cj-35-35.jpg">
+                <img src="../../images-patternlab/daenerys-35-35.jpg">
               </div>
             </div>
             <div class="layout-slat__content">
-              <div class="view__title"><a href="#">Webtwo ipsum dolor sit amet, eskobo chumby doostang bebo</a></div>
+              <div class="view__title"><a href="#">Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM</a></div>
               <div class="view__meta">
-                Posted by <strong>C.J. Cregg</strong> | August 31 at 3:42pm
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="views-row">
-          <div class="layout-slat layout-slat--small">
-            <div class="layout-slat__media">      
-              <div class="view__author-image">
-                <img src="../../images-patternlab/tyrion-35-35.jpg">
-              </div>
-            </div>
-            <div class="layout-slat__content">
-              <div class="view__title"><a href="#">Thunder, thunder, thundercats, Ho!</a></div>
-              <div class="view__meta">
-                Posted by <strong>Tyrion Lannister</strong> | June 8 at 11:37pm
+                Posted by <strong>Daenerys Targaryen</strong> | May 26 at 6:37pm
               </div>
             </div>
           </div>
@@ -903,6 +888,21 @@
               <div class="view__title"><a href="#">Whatever swag accusamus occupy, gentrify butcher tote bag</a></div>
               <div class="view__meta">
                 Posted by <strong>Dana Scully</strong> | April 13 at 10:14am
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="views-row">
+          <div class="layout-slat layout-slat--small">
+            <div class="layout-slat__media">      
+              <div class="view__author-image">
+                <img src="../../images-patternlab/watson-35-35.jpg">
+              </div>
+            </div>
+            <div class="layout-slat__content">
+              <div class="view__title"><a href="#">Veggies sunt bona vobis, proinde vos postulo</a></div>
+              <div class="view__meta">
+                Posted by <strong>Dr. John Watson, M.D.</strong> | February 10 at 1:20pm
               </div>
             </div>
           </div>
@@ -925,28 +925,13 @@
           &lt;div class=&quot;layout-slat layout-slat--small&quot;&gt;
             &lt;div class=&quot;layout-slat__media&quot;&gt;      
               &lt;div class=&quot;view__author-image&quot;&gt;
-                &lt;img src=&quot;../../images-patternlab/cj-35-35.jpg&quot;&gt;
+                &lt;img src=&quot;../../images-patternlab/daenerys-35-35.jpg&quot;&gt;
               &lt;/div&gt;
             &lt;/div&gt;
             &lt;div class=&quot;layout-slat__content&quot;&gt;
-              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Webtwo ipsum dolor sit amet, eskobo chumby doostang bebo&lt;/a&gt;&lt;/div&gt;
+              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM&lt;/a&gt;&lt;/div&gt;
               &lt;div class=&quot;view__meta&quot;&gt;
-                Posted by &lt;strong&gt;C.J. Cregg&lt;/strong&gt; | August 31 at 3:42pm
-              &lt;/div&gt;
-            &lt;/div&gt;
-          &lt;/div&gt;
-        &lt;/div&gt;
-        &lt;div class=&quot;views-row&quot;&gt;
-          &lt;div class=&quot;layout-slat layout-slat--small&quot;&gt;
-            &lt;div class=&quot;layout-slat__media&quot;&gt;      
-              &lt;div class=&quot;view__author-image&quot;&gt;
-                &lt;img src=&quot;../../images-patternlab/tyrion-35-35.jpg&quot;&gt;
-              &lt;/div&gt;
-            &lt;/div&gt;
-            &lt;div class=&quot;layout-slat__content&quot;&gt;
-              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Thunder, thunder, thundercats, Ho!&lt;/a&gt;&lt;/div&gt;
-              &lt;div class=&quot;view__meta&quot;&gt;
-                Posted by &lt;strong&gt;Tyrion Lannister&lt;/strong&gt; | June 8 at 11:37pm
+                Posted by &lt;strong&gt;Daenerys Targaryen&lt;/strong&gt; | May 26 at 6:37pm
               &lt;/div&gt;
             &lt;/div&gt;
           &lt;/div&gt;
@@ -962,6 +947,21 @@
               &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Whatever swag accusamus occupy, gentrify butcher tote bag&lt;/a&gt;&lt;/div&gt;
               &lt;div class=&quot;view__meta&quot;&gt;
                 Posted by &lt;strong&gt;Dana Scully&lt;/strong&gt; | April 13 at 10:14am
+              &lt;/div&gt;
+            &lt;/div&gt;
+          &lt;/div&gt;
+        &lt;/div&gt;
+        &lt;div class=&quot;views-row&quot;&gt;
+          &lt;div class=&quot;layout-slat layout-slat--small&quot;&gt;
+            &lt;div class=&quot;layout-slat__media&quot;&gt;      
+              &lt;div class=&quot;view__author-image&quot;&gt;
+                &lt;img src=&quot;../../images-patternlab/watson-35-35.jpg&quot;&gt;
+              &lt;/div&gt;
+            &lt;/div&gt;
+            &lt;div class=&quot;layout-slat__content&quot;&gt;
+              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Veggies sunt bona vobis, proinde vos postulo&lt;/a&gt;&lt;/div&gt;
+              &lt;div class=&quot;view__meta&quot;&gt;
+                Posted by &lt;strong&gt;Dr. John Watson, M.D.&lt;/strong&gt; | February 10 at 1:20pm
               &lt;/div&gt;
             &lt;/div&gt;
           &lt;/div&gt;
